--- a/cv.css
+++ b/cv.css
@@ -3,9 +3,9 @@ body{
 }
 .cvWrapper{
     display: grid;
-    grid-template-columns: 10mm 65mm 1fr;
+    grid-template-columns: 10mm 65mm 135mm;
     max-width: 21cm;
-    grid-template-rows: 297mm;
+    max-height: 297mm;
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
